Add Vue Project

--- a/sketch/platformio.ini
+++ b/sketch/platformio.ini
@@ -15,3 +15,5 @@ board = lolin32
 
 lib_deps =
     ftSwarm=symlink://../firmware
+    https://github.com/me-no-dev/ESPAsyncWebServer.git
+    arduino-libraries/Arduino_JSON
