Service works in REPL mode now

--- a/sketch/platformio.ini
+++ b/sketch/platformio.ini
@@ -12,8 +12,9 @@
 platform = espressif32
 framework = arduino
 board = lolin32
-
-lib_deps =
-    ftSwarm=symlink://../firmware
-    https://github.com/me-no-dev/ESPAsyncWebServer.git
-    arduino-libraries/Arduino_JSON
+lib_deps = 
+	ftSwarm=symlink://../firmware
+monitor_filters = esp32_exception_decoder
+monitor_speed = 115200
+upload_speed = 921600
+board_build.partitions = no_ota.csv
