A BUNCH Of Stuff (including a better algorithm)

--- a/firmware/mini/platformio.ini
+++ b/firmware/mini/platformio.ini
@@ -9,14 +9,9 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:lolin32]
-platform = https://github.com/platformio/platform-espressif32.git#eff0222cd1ce270a9c5f6d183e6e240f5e5cd458
+platform = espressif32
 framework = arduino
 board = lolin32
-build_flags = 
-	-DARDUINO_EVENT_RUNNING_CORE=1 
-	-DARDUINO_RUNNING_CORE=0
-	-DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
 lib_deps = 
 	ftSwarm=symlink://../firmware
 monitor_filters = esp32_exception_decoder
