--- a/sketch/platformio.ini
+++ b/sketch/platformio.ini
@@ -17,6 +17,7 @@ build_flags =
 	-DARDUINO_RUNNING_CORE=0
 	-DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
+	-DCORE_DEBUG_LEVEL=5
 lib_deps = 
 	ftSwarm=symlink://../firmware
 monitor_filters = esp32_exception_decoder
